src/test/deca/syntax/valid/objet/SetField.deca
class A{
    int x;
    int y;
    int z;
}
{
    A a = new A();
    a.x= 20;
    a.y = 20;
    a.z= 2020;
}