src/test/deca/syntax/invalid/sansObjet/BadPrintln6.deca
{
    int x = 20;
    println(x,"x";
}